[package]
name = "brasilapi"
version = "0.5.0"
edition = "2021"
license = "MIT"
homepage = "https://brasilapi.com.br"
repository = "https://github.com/pedrinfx/brasilapi-rs"
authors = ["Pedro Augusto"]
description = "Uma lib para a API do Brasil API"

[dependencies]
reqwest = "0.11.12"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
httpmock = "0.6"